--- a/fileManagement/src/main/webapp/swagger/index.html
+++ b/fileManagement/src/main/webapp/swagger/index.html
@@ -40,7 +40,7 @@
 
       // Build a system
       const ui = SwaggerUIBundle({
-        url: "http://localhost:8089/fileManagement/api-docs：fileManagement",
+        url:"/v2/api-docs?group=business-api",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
